@@ -16,6 +16,7 @@ x2goclient (4.0.5.1-0x2go1) UNRELEASED; urgency=low
     - Fix crashing client when editing session from SessionManageDialog.
     - Configure audio input in pulseaudio on Windows.
     - Reconnect ssh broker in case of IO Error.
+    - Reformat source onmainwindow.cpp.
 
   [ Mike Gabriel ]
   * New upstream release (4.0.5.1):
